// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-jSFipO sc-jrsKJM helJTd hgyRup has-error aje-input"
    error="some error"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="TextInput-:r0:-input"
    >
      Text Label
    </label>
    <p
      class="sc-hKFymg kNRMRh aje-label--message"
    >
      message
    </p>
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-:r0:-error"
        class="sc-gKAaef fSDxJC"
        id="TextInput-:r0:-input"
        placeholder="placeholder"
        type="text"
        value="content"
      />
    </div>
    <p
      class="sc-eCAqax dNYzUp aje-label--error"
      id="TextInput-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-jSFipO sc-jrsKJM helJTd hgyRup has-error aje-input--floating"
    error="some error"
  >
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-:r1:-error"
        class="sc-gKAaef fSDxJC"
        id="TextInput-:r1:-input"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class="sc-dlniIP coPbkZ aje-label"
        for="TextInput-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="sc-eCAqax dNYzUp aje-label--error"
      id="TextInput-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
